--- a/src/scss/layout/_offer.scss
+++ b/src/scss/layout/_offer.scss
@@ -15,6 +15,7 @@
   }
 
   &__nav-link {
+    @extend .px-0;
     width: 100%;
     height: 100%;
     background: $light-grey;
